--- a/10_03_02_Interactive_Dashboard.ipynb
+++ b/10_03_02_Interactive_Dashboard.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+4FmXCOAV9m253OoGah6P",
+      "authorship_tag": "ABX9TyMDA/4HV6UCC+39dLuzEeKJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,320 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Dn10nxUvgXqR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "Dn10nxUvgXqR",
+        "outputId": "27530af5-6bf8-4752-96bb-898c768d774e"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
+            "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.1)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+            "Collecting dash\n",
+            "  Downloading dash-2.18.2-py3-none-any.whl.metadata (10 kB)\n",
+            "Collecting Flask<3.1,>=1.0.4 (from dash)\n",
+            "  Downloading flask-3.0.3-py3-none-any.whl.metadata (3.2 kB)\n",
+            "Collecting Werkzeug<3.1 (from dash)\n",
+            "  Downloading werkzeug-3.0.6-py3-none-any.whl.metadata (3.7 kB)\n",
+            "Requirement already satisfied: plotly>=5.0.0 in /usr/local/lib/python3.11/dist-packages (from dash) (5.24.1)\n",
+            "Collecting dash-html-components==2.0.0 (from dash)\n",
+            "  Downloading dash_html_components-2.0.0-py3-none-any.whl.metadata (3.8 kB)\n",
+            "Collecting dash-core-components==2.0.0 (from dash)\n",
+            "  Downloading dash_core_components-2.0.0-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Collecting dash-table==5.0.0 (from dash)\n",
+            "  Downloading dash_table-5.0.0-py3-none-any.whl.metadata (2.4 kB)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.11/dist-packages (from dash) (8.6.1)\n",
+            "Requirement already satisfied: typing-extensions>=4.1.1 in /usr/local/lib/python3.11/dist-packages (from dash) (4.12.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from dash) (2.32.3)\n",
+            "Collecting retrying (from dash)\n",
+            "  Downloading retrying-1.3.4-py3-none-any.whl.metadata (6.9 kB)\n",
+            "Requirement already satisfied: nest-asyncio in /usr/local/lib/python3.11/dist-packages (from dash) (1.6.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.11/dist-packages (from dash) (75.1.0)\n",
+            "Requirement already satisfied: Jinja2>=3.1.2 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (3.1.5)\n",
+            "Requirement already satisfied: itsdangerous>=2.1.2 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (2.2.0)\n",
+            "Requirement already satisfied: click>=8.1.3 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (8.1.8)\n",
+            "Requirement already satisfied: blinker>=1.6.2 in /usr/local/lib/python3.11/dist-packages (from Flask<3.1,>=1.0.4->dash) (1.9.0)\n",
+            "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from plotly>=5.0.0->dash) (9.0.0)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from plotly>=5.0.0->dash) (24.2)\n",
+            "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.11/dist-packages (from Werkzeug<3.1->dash) (3.0.2)\n",
+            "Requirement already satisfied: zipp>=3.20 in /usr/local/lib/python3.11/dist-packages (from importlib-metadata->dash) (3.21.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->dash) (2025.1.31)\n",
+            "Requirement already satisfied: six>=1.7.0 in /usr/local/lib/python3.11/dist-packages (from retrying->dash) (1.17.0)\n",
+            "Downloading dash-2.18.2-py3-none-any.whl (7.8 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m58.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading dash_core_components-2.0.0-py3-none-any.whl (3.8 kB)\n",
+            "Downloading dash_html_components-2.0.0-py3-none-any.whl (4.1 kB)\n",
+            "Downloading dash_table-5.0.0-py3-none-any.whl (3.9 kB)\n",
+            "Downloading flask-3.0.3-py3-none-any.whl (101 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m101.7/101.7 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading werkzeug-3.0.6-py3-none-any.whl (227 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m228.0/228.0 kB\u001b[0m \u001b[31m16.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading retrying-1.3.4-py3-none-any.whl (11 kB)\n",
+            "Installing collected packages: dash-table, dash-html-components, dash-core-components, Werkzeug, retrying, Flask, dash\n",
+            "  Attempting uninstall: Werkzeug\n",
+            "    Found existing installation: Werkzeug 3.1.3\n",
+            "    Uninstalling Werkzeug-3.1.3:\n",
+            "      Successfully uninstalled Werkzeug-3.1.3\n",
+            "  Attempting uninstall: Flask\n",
+            "    Found existing installation: Flask 3.1.0\n",
+            "    Uninstalling Flask-3.1.0:\n",
+            "      Successfully uninstalled Flask-3.1.0\n",
+            "Successfully installed Flask-3.0.3 Werkzeug-3.0.6 dash-2.18.2 dash-core-components-2.0.0 dash-html-components-2.0.0 dash-table-5.0.0 retrying-1.3.4\n",
+            "Requirement already satisfied: dash-html-components in /usr/local/lib/python3.11/dist-packages (2.0.0)\n",
+            "Requirement already satisfied: dash-core-components in /usr/local/lib/python3.11/dist-packages (2.0.0)\n",
+            "Requirement already satisfied: plotly in /usr/local/lib/python3.11/dist-packages (5.24.1)\n",
+            "Requirement already satisfied: tenacity>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from plotly) (9.0.0)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from plotly) (24.2)\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install pandas\n",
+        "!pip install dash\n",
+        "!pip install dash-html-components\n",
+        "!pip install dash-core-components\n",
+        "!pip install plotly"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DS0321EN-SkillsNetwork/datasets/spacex_launch_dash.csv\"\n",
+        "!wget \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DS0321EN-SkillsNetwork/labs/module_3/spacex_dash_app.py\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "-Wvkt8fBg_J0",
+        "outputId": "fc49b5f7-45cf-44e0-e8ff-796968f06adc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-03-04 18:56:26--  https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DS0321EN-SkillsNetwork/datasets/spacex_launch_dash.csv\n",
+            "Resolving cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)... 198.23.119.245\n",
+            "Connecting to cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)|198.23.119.245|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 2476 (2.4K) [text/csv]\n",
+            "Saving to: ‘spacex_launch_dash.csv’\n",
+            "\n",
+            "spacex_launch_dash. 100%[===================>]   2.42K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2025-03-04 18:56:27 (570 MB/s) - ‘spacex_launch_dash.csv’ saved [2476/2476]\n",
+            "\n",
+            "--2025-03-04 18:56:27--  https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DS0321EN-SkillsNetwork/labs/module_3/spacex_dash_app.py\n",
+            "Resolving cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)... 198.23.119.245\n",
+            "Connecting to cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)|198.23.119.245|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 2110 (2.1K) [text/x-python]\n",
+            "Saving to: ‘spacex_dash_app.py’\n",
+            "\n",
+            "spacex_dash_app.py  100%[===================>]   2.06K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2025-03-04 18:56:28 (642 MB/s) - ‘spacex_dash_app.py’ saved [2110/2110]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import dash\n",
+        "import dash_html_components as html\n",
+        "import dash_core_components as dcc\n",
+        "from dash.dependencies import Input, Output\n",
+        "import plotly.express as px"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "collapsed": true,
+        "id": "-W-kzmkwhJRs",
+        "outputId": "d52c0a8b-a028-45d6-98cf-a1d0b1de0b90"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-6-8a5d33d24890>:3: UserWarning: \n",
+            "The dash_html_components package is deprecated. Please replace\n",
+            "`import dash_html_components as html` with `from dash import html`\n",
+            "  import dash_html_components as html\n",
+            "<ipython-input-6-8a5d33d24890>:4: UserWarning: \n",
+            "The dash_core_components package is deprecated. Please replace\n",
+            "`import dash_core_components as dcc` with `from dash import dcc`\n",
+            "  import dash_core_components as dcc\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spacex_df = pd.read_csv(\"spacex_launch_dash.csv\")\n",
+        "max_payload = spacex_df['Payload Mass (kg)'].max()\n",
+        "min_payload = spacex_df['Payload Mass (kg)'].min()"
+      ],
+      "metadata": {
+        "id": "_RkTVSyfi9sd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app = dash.Dash(__name__)"
+      ],
+      "metadata": {
+        "id": "Q7cpP13YjDli"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.layout = html.Div(children=[html.H1('SpaceX Launch Records Dashboard',\n",
+        "                                        style={'textAlign': 'center', 'color': '#503D36',\n",
+        "                                               'font-size': 40}),\n",
+        "                                # TASK 1: Add a dropdown list to enable Launch Site selection\n",
+        "                                    dcc.Dropdown(id='site-dropdown',\n",
+        "                                                 options=[{'label': 'All Sites', 'value': 'ALL'}] + [{'label': site, 'value': site} for site in spacex_df['Launch Site'].unique()],\n",
+        "                                                 value='ALL',\n",
+        "                                                 placeholder='Select a Launch Site',\n",
+        "                                                 searchable=True),\n",
+        "                                html.Br(),\n",
+        "\n",
+        "                                # TASK 2: Add a pie chart to show the total successful launches count for all sites\n",
+        "                                # If a specific launch site was selected, show the Success vs. Failed counts for the site\n",
+        "                                html.Div(dcc.Graph(id='success-pie-chart')),\n",
+        "                                html.Br(),\n",
+        "\n",
+        "                                html.P(\"Payload range (Kg):\"),\n",
+        "                                # TASK 3: Add a slider to select payload range\n",
+        "                                dcc.RangeSlider(id='payload-slider',\n",
+        "                                                min=min_payload, max=max_payload, step=1000,\n",
+        "                                                marks={i: f'{i} kg' for i in range(int(min_payload), int(max_payload) + 1, 2000)},\n",
+        "                                                value=[min_payload, max_payload]),\n",
+        "\n",
+        "                                # TASK 4: Add a scatter chart to show the correlation between payload and launch success\n",
+        "                                html.Div(dcc.Graph(id='success-payload-scatter-chart')),\n",
+        "                                ])\n",
+        "\n",
+        "# TASK 2:\n",
+        "@app.callback(\n",
+        "    Output('success-pie-chart', 'figure'),\n",
+        "    Input('site-dropdown', 'value')\n",
+        ")\n",
+        "def update_pie_chart(selected_site):\n",
+        "    if selected_site == 'ALL':\n",
+        "        fig = px.pie(spacex_df, values='class', names='Launch Site', title='Total Successful Launches by Site')\n",
+        "    else:\n",
+        "        site_df = spacex_df[spacex_df['Launch Site'] == selected_site]\n",
+        "        fig = px.pie(site_df, names='class', title=f'Success vs. Failure for {selected_site}')\n",
+        "    return fig\n",
+        "\n",
+        "# TASK 4:\n",
+        "@app.callback(\n",
+        "    Output('success-payload-scatter-chart', 'figure'),\n",
+        "    [Input('site-dropdown', 'value'),\n",
+        "     Input('payload-slider', 'value')]\n",
+        ")\n",
+        "def update_scatter_chart(selected_site, payload_range):\n",
+        "    filtered_df = spacex_df[(spacex_df['Payload Mass (kg)'] >= payload_range[0]) &\n",
+        "                            (spacex_df['Payload Mass (kg)'] <= payload_range[1])]\n",
+        "    if selected_site != 'ALL':\n",
+        "        filtered_df = filtered_df[filtered_df['Launch Site'] == selected_site]\n",
+        "\n",
+        "    fig = px.scatter(filtered_df, x='Payload Mass (kg)', y='class', color='Booster Version Category',\n",
+        "                     title='Correlation Between Payload and Success',\n",
+        "                     labels={'class': 'Launch Outcome'})\n",
+        "    return fig"
+      ],
+      "metadata": {
+        "id": "GUSaaiuHjKal"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    app.run_server()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 671
+        },
+        "id": "OSlWNsDYjR0f",
+        "outputId": "158f1b80-fd7a-4899-b16b-afbcb51d254d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "(async (port, path, width, height, cache, element) => {\n",
+              "    if (!google.colab.kernel.accessAllowed && !cache) {\n",
+              "      return;\n",
+              "    }\n",
+              "    element.appendChild(document.createTextNode(''));\n",
+              "    const url = await google.colab.kernel.proxyPort(port, {cache});\n",
+              "    const iframe = document.createElement('iframe');\n",
+              "    iframe.src = new URL(path, url).toString();\n",
+              "    iframe.height = height;\n",
+              "    iframe.width = width;\n",
+              "    iframe.style.border = 0;\n",
+              "    iframe.allow = [\n",
+              "        'accelerometer',\n",
+              "        'autoplay',\n",
+              "        'camera',\n",
+              "        'clipboard-read',\n",
+              "        'clipboard-write',\n",
+              "        'gyroscope',\n",
+              "        'magnetometer',\n",
+              "        'microphone',\n",
+              "        'serial',\n",
+              "        'usb',\n",
+              "        'xr-spatial-tracking',\n",
+              "    ].join('; ');\n",
+              "    element.appendChild(iframe);\n",
+              "  })(8050, \"/\", \"100%\", 650, false, window.element)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
